--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -6,9 +6,9 @@
 body{
     background-color: black;
 }
-header h1{
+// header h1{
 
-    color:rgb(235, 235, 235);
-    font-family: $fontRubik;
-    font-size: 80px;
-}
+//     color:rgb(235, 235, 235);
+//     font-family: $fontRubik;
+//     font-size: 80px;
+// }
