--- a/css/main.css
+++ b/css/main.css
@@ -19,4 +19,54 @@ body {
   background-color: black;
 }
 
+header .menuTop {
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #1e1e1e;
+  box-shadow: 0 0 10px black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+header .menuTop .drawerIcon {
+  width: 25px;
+  cursor: pointer;
+  transform: scale(100%) rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+header .menuTop .drawerIcon:hover {
+  filter: drop-shadow(0 0 10px #696061);
+  transform: scale(103%) rotate(-90deg);
+}
+header .menuTop .brand {
+  width: 200px;
+}
+header .menuTop .menuIcons ul {
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+}
+header .menuTop .menuIcons ul li {
+  list-style-type: none;
+}
+header .menuTop .menuIcons ul li a {
+  padding: 0px 5px;
+}
+header .menuTop .menuIcons ul li a .icon {
+  transform: scale(100%);
+  transition: transform 0.3s ease-in-out;
+}
+header .menuTop .menuIcons ul li a .icon:hover {
+  transform: scale(103%);
+  filter: drop-shadow(0 0 10px #696061);
+}
+.container {
+  width: 100%;
+  height: 1000px;
+}
+
 /*# sourceMappingURL=main.css.map */
