--- a/css/main.css
+++ b/css/main.css
@@ -16,54 +16,119 @@
 }
 
 body {
-  background-color: black;
+  background-color: rgb(187, 186, 186);
 }
 
-header .menuTop {
+.header {
   width: 100%;
   height: 60px;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #1e1e1e;
-  box-shadow: 0 0 10px black;
+  background-color: #1b1b1b;
+  box-shadow: 0 0 10px #161616;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 10px;
+}
+.header #menuSide {
+  display: none;
+}
+.header #menuSide:checked ~ .menuSide {
+  transform: translate(0%);
+}
+.header label .drawerIcon {
+  width: 25px;
+  cursor: pointer;
+  transform: scale(100%);
+  transition: all 0.3s ease-in-out;
+}
+.header label .drawerIcon:hover {
+  filter: drop-shadow(0 0 10px #696061);
+  transform: scale(103%);
+}
+.header .logo .brand {
+  width: 35px;
+  transform: scale(100%);
+  transition: transform 0.3s ease-in-out;
+}
+.header .logo .brand:hover {
+  transform: scale(103%);
+  filter: drop-shadow(0 0 10px #696061);
+}
+.header .menuIcons ul {
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+}
+.header .menuIcons ul li {
+  list-style-type: none;
+}
+.header .menuIcons ul li a {
+  padding: 0px 5px;
+}
+.header .menuIcons ul li a .icon {
+  transform: scale(100%);
+  transition: transform 0.3s ease-in-out;
+}
+.header .menuIcons ul li a .icon:hover {
+  transform: scale(103%);
+  filter: drop-shadow(0 0 10px #696061);
+}
+.header .menuSide {
+  width: 20%;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  background-color: #070707;
+  transform: translate(-100%);
+  transition: 0.3s ease-in-out;
+}
+.header .menuSide .close {
+  width: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.header .menuSide .menu {
+  width: 100%;
+}
+.header .menuSide .menu ul li {
+  list-style-type: none;
+}
+.header .menuSide .menu ul li .link {
+  text-decoration: none;
+  background-color: aliceblue;
+}
+.header .menuSide .contactUs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding-left: 30px;
+}
+.header .menuSide .contactUs ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
-header .menuTop .drawerIcon {
-  width: 25px;
-  cursor: pointer;
-  transform: scale(100%) rotate(0deg);
-  transition: all 0.3s ease-in-out;
-}
-header .menuTop .drawerIcon:hover {
-  filter: drop-shadow(0 0 10px #696061);
-  transform: scale(103%) rotate(-90deg);
-}
-header .menuTop .brand {
-  width: 200px;
-}
-header .menuTop .menuIcons ul {
-  display: flex;
-  flex-direction: row;
-  margin: 0px;
-}
-header .menuTop .menuIcons ul li {
+.header .menuSide .contactUs ul li {
   list-style-type: none;
 }
-header .menuTop .menuIcons ul li a {
-  padding: 0px 5px;
+.header .menuSide .contactUs ul li .item {
+  text-decoration: none;
 }
-header .menuTop .menuIcons ul li a .icon {
-  transform: scale(100%);
-  transition: transform 0.3s ease-in-out;
-}
-header .menuTop .menuIcons ul li a .icon:hover {
-  transform: scale(103%);
-  filter: drop-shadow(0 0 10px #696061);
-}
+
 .container {
   width: 100%;
   height: 1000px;
