--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,45 +1,60 @@
-header{
-    .menuTop{
-        width:100%;
-        height: 60px;
-        position: fixed;
-        top:0;
-        left:0;
-        background-color:#1e1e1e ;
-        box-shadow: 0 0 10px black;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
+.header{
+    width:100%;
+    height: 60px;
+    position: fixed;
+    top:0;
+    left:0;
+    background-color:#1b1b1b;
+    box-shadow: 0 0 10px #161616;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 10px;
+    #menuSide{
+        display: none;
+        &:checked ~ .menuSide{
+            transform: translate(0%);
+        }
+    }
+    label{
         .drawerIcon{
             width:25px;
             cursor: pointer;
-            transform: scale(100%) rotate(0deg);
+            transform: scale(100%);
             transition: all 0.3s ease-in-out;
             &:hover{
                 filter:drop-shadow(0 0 10px #696061);
-                transform: scale(103%) rotate(-90deg);
+                transform: scale(103%);
             }
         }
+    }
+    .logo{
         .brand{
-            width:200px;
+            width:35px;
+            transform: scale(100%);
+            transition: transform 0.3s ease-in-out;
+            &:hover{
+                transform: scale(103%);
+                filter:drop-shadow(0 0 10px #696061);
+            }
         }
-        .menuIcons{
-            ul{
-                display: flex;
-                flex-direction: row;
-                margin: 0px;
-                li{
-                    list-style-type: none;
-                    a{
-                        padding: 0px 5px;
-                        .icon{
-                            transform: scale(100%);
-                            transition: transform 0.3s ease-in-out;
-                            &:hover{
-                                transform: scale(103%);
-                                filter:drop-shadow(0 0 10px #696061);
-                            }
+    }
+    .menuIcons{
+        ul{
+            display: flex;
+            flex-direction: row;
+            margin: 0px;
+            li{
+                list-style-type: none;
+                a{
+                    padding: 0px 5px;
+                    .icon{
+                        transform: scale(100%);
+                        transition: transform 0.3s ease-in-out;
+                        &:hover{
+                            transform: scale(103%);
+                            filter:drop-shadow(0 0 10px #696061);
                         }
                     }
                 }
@@ -47,7 +62,57 @@ header{
         }
     }
     .menuSide{
-
+        width:20%;
+        height: 100vh;
+        display:flex;
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: 10px;
+        flex-direction: column;
+        justify-content:space-around;
+        align-items: flex-start;
+        background-color: #070707;
+        transform: translate(-100%);
+        transition: .3s ease-in-out;
+        .close{
+            width:20px;
+            cursor: pointer;
+            position: absolute;
+            top:20px;
+            right:20px;
+        }
+        .menu{
+            width: 100%;
+            ul{
+                li{
+                    list-style-type: none;
+                    .link{
+                        text-decoration: none;
+                        background-color: aliceblue;
+                    }
+                }
+            }
+        }
+        .contactUs{
+            display:flex;
+            flex-direction: column;
+            justify-content:space-around;
+            align-items: flex-start;
+            padding-left: 30px;
+            ul{
+                display:flex;
+                flex-direction: row;
+                justify-content:space-around;
+                align-items: center;
+                li{
+                    list-style-type: none;
+                    .item{
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
     }
 }
 .container{
