--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
   top: 0;
   left: 0;
   background-color: #1b1b1b;
-  box-shadow: 0 0 10px #161616;
+  box-shadow: 0 0 10px 4px #161616;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -50,7 +50,7 @@ body {
   transform: scale(103%);
 }
 .header .logo .brand {
-  width: 35px;
+  width: 45px;
   transform: scale(100%);
   transition: transform 0.3s ease-in-out;
 }
@@ -78,7 +78,7 @@ body {
   filter: drop-shadow(0 0 10px #696061);
 }
 .header .menuSide {
-  width: 20%;
+  width: 20vw;
   height: 100vh;
   display: flex;
   position: fixed;
@@ -86,47 +86,74 @@ body {
   left: 0;
   z-index: 10px;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: flex-start;
   background-color: #070707;
+  overflow: hidden;
+  box-shadow: 0 0 10px 4px #161616;
   transform: translate(-100%);
   transition: 0.3s ease-in-out;
 }
-.header .menuSide .close {
+.header .menuSide .top {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px 10px 10px;
+}
+.header .menuSide .top .brand {
+  width: 45px;
+}
+.header .menuSide .top label .close {
   width: 20px;
   cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-.header .menuSide .menu {
-  width: 100%;
 }
 .header .menuSide .menu ul li {
   list-style-type: none;
+  padding: 10px 0px;
 }
 .header .menuSide .menu ul li .link {
   text-decoration: none;
-  background-color: aliceblue;
+  color: rgb(194, 193, 193);
+  font-size: 0.9rem;
+  font-family: "Jura", sans-serif;
+  transition: all 0.5s;
+}
+.header .menuSide .menu ul li .link:hover {
+  text-decoration: underline;
 }
 .header .menuSide .contactUs {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
-  padding-left: 30px;
+  margin-left: 30px;
+}
+.header .menuSide .contactUs p {
+  color: rgb(194, 193, 193);
+  font-size: 0.9rem;
+  font-family: "Jura", sans-serif;
 }
 .header .menuSide .contactUs ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: -40px;
+  padding-top: 10px;
+  border-top: 1px solid rgb(61, 61, 61);
 }
 .header .menuSide .contactUs ul li {
   list-style-type: none;
 }
 .header .menuSide .contactUs ul li .item {
   text-decoration: none;
+}
+.header .menuSide .contactUs ul li .item .itemSocial {
+  width: 35px;
+  margin: 0px 5px;
 }
 
 .container {
