--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,7 +5,7 @@
     top:0;
     left:0;
     background-color:#1b1b1b;
-    box-shadow: 0 0 10px #161616;
+    box-shadow: 0 0 10px 4px #161616;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -31,7 +31,7 @@
     }
     .logo{
         .brand{
-            width:35px;
+            width:45px;
             transform: scale(100%);
             transition: transform 0.3s ease-in-out;
             &:hover{
@@ -62,7 +62,7 @@
         }
     }
     .menuSide{
-        width:20%;
+        width:20vw;
         height: 100vh;
         display:flex;
         position: fixed;
@@ -70,45 +70,76 @@
         left:0;
         z-index: 10px;
         flex-direction: column;
-        justify-content:space-around;
+        justify-content:space-between;
         align-items: flex-start;
         background-color: #070707;
+        overflow: hidden;
+        box-shadow: 0 0 10px 4px #161616;
+
         transform: translate(-100%);
         transition: .3s ease-in-out;
-        .close{
-            width:20px;
-            cursor: pointer;
-            position: absolute;
-            top:20px;
-            right:20px;
+        .top{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
+            .brand{
+                width: 45px;
+            }
+            label{
+                .close{
+                    width:20px;
+                    cursor: pointer;
+                }
+            }
         }
         .menu{
-            width: 100%;
             ul{
                 li{
                     list-style-type: none;
+                    padding: 10px 0px;
                     .link{
                         text-decoration: none;
-                        background-color: aliceblue;
+                        color:rgb(194, 193, 193);
+                        font-size: .9rem;
+                        font-family: $fontJura;transition:all .5s;
+                        &:hover{
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
         }
         .contactUs{
+            width: 100%;
             display:flex;
             flex-direction: column;
             justify-content:space-around;
             align-items: flex-start;
-            padding-left: 30px;
+            margin-left: 30px;
+            p{
+                color:rgb(194, 193, 193);
+                font-size: .9rem;
+                font-family: $fontJura;
+            }
             ul{
                 display:flex;
                 flex-direction: row;
-                justify-content:space-around;
-                align-items: center;
+                justify-content:center;
+                align-items: flex-start;
+                margin-left: -40px;
+                padding-top: 10px;
+                border-top: 1px solid rgb(61, 61, 61);
                 li{
                     list-style-type: none;
                     .item{
                         text-decoration: none;
+                        .itemSocial{
+                            width:35px;
+                            margin: 0px 5px;
+                        }
                     }
                 }
             }
