--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,9 @@ body {
   box-shadow: 0 0 10px 4px #161616;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0px 20px;
   z-index: 10px;
 }
 .header #menuSide {
@@ -108,6 +109,12 @@ body {
 .header .menuSide .top label .close {
   width: 20px;
   cursor: pointer;
+  transform: scale(100%);
+  transition: all 0.3s ease-in-out;
+}
+.header .menuSide .top label .close:hover {
+  filter: drop-shadow(0 0 10px #696061);
+  transform: scale(103%);
 }
 .header .menuSide .menu ul li {
   list-style-type: none;
