--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -8,8 +8,9 @@
     box-shadow: 0 0 10px 4px #161616;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding:0px 20px;
     z-index: 10px;
     #menuSide{
         display: none;
@@ -75,7 +76,6 @@
         background-color: #070707;
         overflow: hidden;
         box-shadow: 0 0 10px 4px #161616;
-
         transform: translate(-100%);
         transition: .3s ease-in-out;
         .top{
@@ -92,6 +92,12 @@
                 .close{
                     width:20px;
                     cursor: pointer;
+                    transform: scale(100%);
+                    transition: all 0.3s ease-in-out;
+                    &:hover{
+                        filter:drop-shadow(0 0 10px #696061);
+                        transform: scale(103%);
+                    }
                 }
             }
         }
