--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -5,4 +5,11 @@
 }
 body{
     background-color: rgb(16, 16, 16);
+    .container{
+        width: 100vw;
+        height: auto;
+        margin: auto;
+        padding: auto;
+    }
+
 }
