--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -1,82 +1,9 @@
-.container{
-    width: 100%;
-    height: auto;
-    .heroSection{
-        width: 100%;
-        height: 1000px;
-        // background-image: url(../img/background_Hero.webp);
-        background-position: 100%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        object-fit: cover;
-        z-index: 1;
-        .heroSectionCentered{
-            width: 100%;
-            height: auto;
-            display: flex;
-            flex-direction: row;
-            margin: 150px -50px 150px 0px;
-            position: relative;
-            .paragraph{
-                width:55%;
-                margin-left: -60px;
-                .break{
-                    font-size: 100px;
-                    font-family: $fontRubik;
-                    color: #9A9A9A;
-                }
-                .subtitle{
-                    font-size: 45px;
-                    font-family: $fontJura;
-                    color: #BC2327;
-                    margin-top: -45px;
-                }
-                .cta{
-                    margin:35px 0px;
-                    .ctaDiscount{
-                        background-color: #9A9A9A;
-                        padding: 25px 95px;
-                        color:#191919;
-                        font-weight: 700;
-                        font-family: $fontJura;
-                        font-size: 1.2rem;
-                        text-decoration: none;
-                        // transform: scale(100%);
-                        transition: all 0.3s ease;
-                        &:hover{
-                            // transform: scale(103%);
-                            background-color: #1d1d1d;
-                            box-shadow: 0 0 10px 6px #070707;
-                            color: #ffffff;
-                        }
-                    }
-                    .ctaNewArrivals{
-                        background-color: #BC2327;
-                      padding: 25px 85px;
-                        color:#ffffff;
-                        margin-left: 10px;
-                        font-weight: 700;
-                        font-family: $fontJura;
-                        font-size: 1.2rem;
-                        text-decoration: none;
-                        // transform: scale(100%);
-                        transition: all 0.3s ease-in-out;
-                        &:hover{
-                            // transform: scale(103%);
-                            background-color: #1d1d1d;
-                            box-shadow: 0 0 10px 6px #070707;
-                        }
-                    }
-                }
-            }
-            .laptop{
-                width: 65%;
-                position: absolute;
-                top:0px;
-                right:-115px;
-                overflow: visible;
-            }
-        }
-    }
+.heroSection{
+    width:100%;
+    height: 100%;
+    background-image: url(../img/background_Hero.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
 }
-
