--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -12,7 +12,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 0px 20px;
+        padding: 50px 20px;
         position: relative;
         .socialMedia{
             .contactUs{
@@ -20,7 +20,6 @@
                 font-weight: 600;
                 font-size: 0.9rem;
                 color:rgb(194, 193, 193);
-                padding: 10px 0px;
             }
             ul{
                 display:flex;
@@ -48,7 +47,7 @@
             justify-content: center;
             align-items: center;
             position: absolute;
-            top:0;
+            top:50px;
             left:43.5%;
             .nameLogo{
                 font-size: 1.8rem;
@@ -69,9 +68,9 @@
                 font-weight: 600;
                 font-size: 0.9rem;
                 color:rgb(194, 193, 193);
-                padding: 10px 0px;
+                padding: 0px 0px;
                 position: absolute;
-                top:0;
+                top:50px;
                 right: 225px;
             }
             .paymentCards{
@@ -89,6 +88,7 @@
         padding-top: 10px;
         .raccoon{
             width:35px;
+            padding-bottom: 5px;
         }
         .developer{
             text-align: center;
