--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,9 @@ body {
   background-color: rgb(16, 16, 16);
 }
 body .container {
-  width: 100vw;
-  height: auto;
-  margin: auto;
-  padding: auto;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 .header {
@@ -192,12 +191,61 @@ body .container {
 
 .heroSection {
   width: 100%;
-  height: 100%;
-  background-image: url(../img/background_Hero.webp);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: 100vh;
   z-index: -1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 150px;
+}
+.heroSection .heroSectionCentered {
+  z-index: 1;
+}
+.heroSection .heroSectionCentered .info {
+  text-align: left;
+}
+.heroSection .heroSectionCentered .info .break {
+  font-size: 4.5rem;
+  font-family: "Rubik Distressed", cursive;
+  color: #9A9A9A;
+}
+.heroSection .heroSectionCentered .info .subtitle {
+  font-size: 2.5rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin-top: -55px;
+}
+.heroSection .heroSectionCentered .info .cta {
+  width: 100%;
+  margin-top: 35px;
+}
+.heroSection .heroSectionCentered .info .cta .ctaDiscount, .heroSection .heroSectionCentered .info .cta .ctaNewArrivals {
+  padding: 25px 55px;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: #191919;
+  background-color: #9A9A9A;
+  margin-right: 5px;
+  text-decoration: none;
+  transform: scale(100%);
+  transition: all 0.5s ease;
+}
+.heroSection .heroSectionCentered .info .cta .ctaDiscount:hover, .heroSection .heroSectionCentered .info .cta .ctaNewArrivals:hover {
+  color: #ffffff;
+  background-color: #070707;
+  box-shadow: 0 0 10px 4px #070707;
+  text-decoration: underline;
+}
+.heroSection .heroSectionCentered .info .cta .ctaNewArrivals {
+  color: #ffffff;
+  background-color: #BC2327;
+}
+.heroSection .laptop {
+  width: 60%;
+  padding-top: 100px;
 }
 
 .footerContainer {
