--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -6,10 +6,9 @@
 body{
     background-color: rgb(16, 16, 16);
     .container{
-        width: 100vw;
-        height: auto;
-        margin: auto;
-        padding: auto;
+        width: 100%;
+        height: 100%;
+margin: 0 auto;
     }
 
 }
