--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -1,9 +1,62 @@
 .heroSection{
     width:100%;
-    height: 100%;
-    background-image: url(../img/background_Hero.webp);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: 100vh;
+    // background-image: url(../img/background_Hero.webp);
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
     z-index: -1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 150px;
+    .heroSectionCentered{
+        z-index: 1;
+        .info{
+            text-align: left;
+            .break{
+                font-size: 4.5rem;
+                font-family: $fontRubik;
+                color: #9A9A9A;
+            }
+            .subtitle{
+                font-size: 2.5rem;
+                font-family: $fontJura;
+                color: #BC2327;
+                font-weight: 600;
+                margin-top: -55px;
+            }
+            .cta{
+                width:100%;
+                margin-top: 35px;
+                .ctaDiscount, .ctaNewArrivals{
+                    padding: 25px 55px;
+                    font-family: $fontJura;
+                    font-weight: 600;
+                    font-size: 1.2rem;
+                    color:#191919;
+                    background-color: #9A9A9A;
+                    margin-right: 5px;
+                    text-decoration: none;
+                    transform:scale(100%);
+                    transition: all 0.5s ease;
+                    &:hover{
+                        color:#ffffff;
+                        background-color: #070707;
+                        box-shadow: 0 0 10px 4px #070707;
+                        text-decoration: underline;
+                    }
+                }
+                .ctaNewArrivals{
+                    color:#ffffff;
+                    background-color: #BC2327;
+                }
+            }
+        }
+    }
+    .laptop{
+        width: 60%;
+        padding-top: 100px;
+    }
 }
