--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -10,7 +10,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 150px;
+    margin: 0px 0px 150px 0px;
     .heroSectionCentered{
         z-index: 1;
         .info{
