--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,6 @@ body {
 body .container {
   width: 100%;
   height: 100%;
-  margin: 0 auto;
 }
 
 .header {
@@ -197,7 +196,7 @@ body .container {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 150px;
+  margin: 0px 0px 150px 0px;
 }
 .heroSection .heroSectionCentered {
   z-index: 1;
@@ -246,6 +245,43 @@ body .container {
 .heroSection .laptop {
   width: 60%;
   padding-top: 100px;
+}
+
+.advertising {
+  width: 100%;
+  height: 900px;
+  background-image: url(../img/background_Advertising.webp);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 150px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 100px;
+}
+.advertising .advertisingMood {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+.advertising .advertisingMood .subtitle {
+  font-size: 3.5rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #E0E0E0;
+}
+.advertising .advertisingMood .subtitle:nth-child(1) {
+  opacity: 1;
+}
+.advertising .advertisingMood .subtitle:nth-child(2) {
+  opacity: 0.65;
+}
+.advertising .advertisingMood .subtitle:nth-child(3) {
+  opacity: 0.35;
 }
 
 .footerContainer {
