--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ body .container {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0px 0px 150px 0px;
+  margin: 0px 0px 200px 0px;
 }
 .heroSection .heroSectionCentered {
   z-index: 1;
@@ -235,7 +235,7 @@ body .container {
 .heroSection .heroSectionCentered .info .cta .ctaDiscount:hover, .heroSection .heroSectionCentered .info .cta .ctaNewArrivals:hover {
   color: #ffffff;
   background-color: #070707;
-  box-shadow: 0 0 10px 4px #070707;
+  box-shadow: 0 0 6px 2px #BC2327;
   text-decoration: underline;
 }
 .heroSection .heroSectionCentered .info .cta .ctaNewArrivals {
@@ -247,6 +247,50 @@ body .container {
   padding-top: 100px;
 }
 
+.getOff {
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/background_Gift.webp");
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 200px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.getOff .info .title {
+  font-size: 4rem;
+  font-family: "Rubik Distressed", cursive;
+  color: #BC2327;
+  margin-top: -200px;
+}
+.getOff .info .paragraph {
+  margin-top: 100px;
+}
+.getOff .info .paragraph .subtitle, .getOff .info .paragraph .sentence, .getOff .info .paragraph .cta {
+  font-size: 1.8rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #E0E0E0;
+}
+.getOff .info .paragraph .sentence {
+  font-size: 1.5rem;
+}
+.getOff .info .cta {
+  font-size: 1.3rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #E0E0E0;
+  transition: color 0.3s;
+}
+.getOff .info .cta:hover {
+  color: #8a8a8a;
+}
+
 .advertising {
   width: 100%;
   height: 900px;
@@ -255,7 +299,7 @@ body .container {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  margin: 150px auto;
+  margin: 200px 0px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
