--- a/scss/_advertising.scss
+++ b/scss/_advertising.scss
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    margin: 150px auto;
+    margin:  200px 0px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
