--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 body{
+    // background-color: rgb(230, 230, 230);
     background-color: rgb(16, 16, 16);
     .container{
         width: 100%;
         height: 100%;
-
     }
 }
