--- a/scss/_hero_Section.scss
+++ b/scss/_hero_Section.scss
@@ -43,7 +43,7 @@
                     transition: all 0.5s ease;
                     &:hover{
                         color:#ffffff;
-                        background-color: #070707;
+                        background-color: #3d3d3d;
                         box-shadow: 0 0 6px 2px #BC2327;
                         text-decoration: underline;
                     }
