--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -1,1 +1,74 @@
 
+.bestSellers{
+    width:100%;
+    height: auto;
+    .subtitle{
+        font-size:4rem;
+        font-family: $fontRubik;
+        color: #BC2327;
+        text-align: center;
+        margin-bottom: 100px;
+    }
+    .sectionCard{
+        .cardProducts{
+            cursor: pointer;
+            .outFit{
+                width:100%;
+                filter: grayscale(10%);
+                transition: all 0.3s ease;
+                &:hover{
+                    filter: grayscale(100%);
+                }
+            }
+            .info{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                color: #D9D9D9;
+                padding:10px;
+                .linkStore{
+                    width: 100%;
+                    text-align: center;
+                    padding: 5px;
+                    color: #D9D9D9;
+                    background-color: #BC2327;
+                    text-decoration: none;
+                    transition: all 0.3s ease;
+                    &:hover{
+                        color: #D9D9D9;
+                        background-color: #3d3d3d;
+                    }
+                }
+            }
+        }
+        .cardProducts +.outFit{
+            filter: grayscale(10%);
+            transition: all 0.3s ease;
+            &:hover{
+                filter: grayscale(100%);
+            }
+        }
+        .cardProducts{
+            transition: all 0.3s ease;
+            &:hover{
+                box-shadow: 0 0 6px 4px black;
+            }
+        }
+    }
+    .ctaStore{
+        display:flex;
+        justify-content: center;
+        margin: 70px auto 0px;
+        width: 200px;
+        padding:20px 40px;
+        color:#d9d9d9;
+        background-color: #3f3f3f;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        &:hover{
+            background-color:#BC2327 ;
+            box-shadow: 0 0 6px 4px black;
+            text-decoration: underline;
+        }
+    }
+}
