--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ body .container {
 }
 .header .menuSide .menu ul li .link:hover {
   text-decoration: underline;
+  filter: drop-shadow(0 0 6px #BC2327);
 }
 .header .menuSide .contactUs {
   display: flex;
@@ -398,6 +399,21 @@ body .container {
   background-color: #BC2327;
   box-shadow: 0 0 6px 4px black;
   text-decoration: underline;
+}
+
+.newArrivals {
+  width: 100%;
+  height: auto;
+}
+.newArrivals .subtitle {
+  font-size: 4rem;
+  font-family: "Rubik Distressed", cursive;
+  color: #BC2327;
+  text-align: center;
+  margin-bottom: 100px;
+}
+.newArrivals .sectionCard .cardProducts {
+  cursor: pointer;
 }
 
 .footerContainer {
