Making New Arrivals

--- a/scss/_advertising.scss
+++ b/scss/_advertising.scss
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    object-fit: cover;
     margin:  200px 0px;
     display: flex;
     flex-direction: column;
