--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ body .container {
   font-size: 1.5rem;
 }
 .getOff .info .cta {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #E0E0E0;
@@ -300,6 +300,7 @@ body .container {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  object-fit: cover;
   margin: 200px 0px;
   display: flex;
   flex-direction: column;
@@ -345,7 +346,6 @@ body .container {
 }
 .bestSellers .sectionCard .cardProducts .outFit {
   width: 100%;
-  filter: grayscale(10%);
   transition: all 0.3s ease;
 }
 .bestSellers .sectionCard .cardProducts .outFit:hover {
@@ -370,13 +370,6 @@ body .container {
 .bestSellers .sectionCard .cardProducts .info .linkStore:hover {
   color: #D9D9D9;
   background-color: #3d3d3d;
-}
-.bestSellers .sectionCard .cardProducts + .outFit {
-  filter: grayscale(10%);
-  transition: all 0.3s ease;
-}
-.bestSellers .sectionCard .cardProducts + .outFit:hover {
-  filter: grayscale(100%);
 }
 .bestSellers .sectionCard .cardProducts {
   transition: all 0.3s ease;
@@ -412,8 +405,31 @@ body .container {
   text-align: center;
   margin-bottom: 100px;
 }
+.newArrivals .sectionCard {
+  margin-bottom: 70px;
+}
 .newArrivals .sectionCard .cardProducts {
+  width: 25%;
   cursor: pointer;
+}
+.newArrivals .sectionCard .cardProducts .article .outFit {
+  width: 100%;
+}
+.newArrivals .ctaStore {
+  display: flex;
+  justify-content: center;
+  margin: 70px auto 0px;
+  width: 200px;
+  padding: 20px 40px;
+  color: #d9d9d9;
+  background-color: #3f3f3f;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+.newArrivals .ctaStore:hover {
+  background-color: #BC2327;
+  box-shadow: 0 0 6px 4px black;
+  text-decoration: underline;
 }
 
 .footerContainer {
