--- a/scss/_gift_Card.scss
+++ b/scss/_gift_Card.scss
@@ -66,7 +66,7 @@
             align-items: flex-start;
             .subtitleMessage{ font-size:3rem;
                 font-family: $fontJura;
-                color: #959595;
+                color: #BC2327;
                 text-align: left;
             }
             .paragraph{
@@ -74,6 +74,9 @@
                 font-family: $fontJura;
                 color: #A5A5A5;
                 text-align: left;
+                .higthlighter{
+                    color: #BC2327;
+                }
             }
         }
     }
