--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 0 10px 6px #070707;
     .footer{
         width:100%;
         display: flex;
