--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -26,8 +26,7 @@
                 font-size:1.8rem;
                 font-family: $fontJura;
                 font-weight: 600;
-                color: #E0E0E0;
-            }
+                color: #D9D9D9;            }
             .subtitle{
             }
             .sentence{
