--- a/scss/_new_Arrivals.scss
+++ b/scss/_new_Arrivals.scss
@@ -15,12 +15,10 @@
             position: relative;
             // clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
             transition: clip-path 0.3s ease;
-
             .article{
                 .smallCard{
                     display:none;
                 }
-
                 //     &:checked + .smallCard{
                 //     clip-path: polygon(100% 0, 100% 0, 100% 0);
                 // }
@@ -35,7 +33,7 @@
                     position:absolute;
                     top:20px;
                     right:20px;
-                    border: 2px solid white;
+                    border: 2px solid #ffffff;
                     border-radius: 50%;
                     cursor:pointer;
                     z-index: 1;
@@ -44,7 +42,7 @@
                         width: 60%;
                         height:auto;
                         cursor: pointer;
-                        background-color:rgb(39, 39, 39);
+                        background-color:#272727;
                         position:absolute;
                         top:125px;
                         right:25px;
@@ -60,7 +58,7 @@
                         }
                         .price{
                             height: 50px;
-                            color:rgb(255, 247, 247);
+                            color:#fff7f7;
                             font-size: 0.8rem;
                             font-weight: 400;
                             font-family: $fontJura;
@@ -86,7 +84,7 @@
         transition: all 0.3s ease;
         &:hover{
             background-color:#BC2327 ;
-            box-shadow: 0 0 6px 4px black;
+            box-shadow: 0 0 4px 2px rgb(112, 112, 112);
             text-decoration: underline;
         }
     }
