--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -36,7 +36,6 @@
                     text-decoration: none;
                     transition: all 0.3s ease;
                     &:hover{
-                        color: #D9D9D9;
                         background-color: #3d3d3d;
                     }
                 }
@@ -51,7 +50,7 @@
         .cardProducts{
             transition: all 0.3s ease;
             &:hover{
-                box-shadow: 0 0 6px 4px black;
+                box-shadow: 0 0 4px 2px rgb(112, 112, 112);
             }
         }
     }
@@ -67,7 +66,7 @@
         transition: all 0.3s ease;
         &:hover{
             background-color:#BC2327 ;
-            box-shadow: 0 0 6px 4px black;
+            box-shadow: 0 0 4px 2px rgb(112, 112, 112);
             text-decoration: underline;
         }
     }
